fix: no items z-index

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -88,7 +88,7 @@ body {
 .no_items {
   position: absolute;
   margin: 0;
-  z-index: 100;
+  z-index: 9;
   left: 0;
   right: 0;
   top: 53px;
